Instated a second mirror option and an animate option.

--- a/time on still.ipynb
+++ b/time on still.ipynb
@@ -151,7 +151,7 @@
     "    \"\"\"\n",
     "    \n",
     "    \n",
-    "    def __init__(self,openedim,rotated):\n",
+    "    def __init__(self,openedim):\n",
     "        '''\n",
     "        initialize the file into a moviepy video.\n",
     "        '''\n",
@@ -159,15 +159,28 @@
     "        self.theimage = np.array(openedim)    \n",
     "        \n",
     "        self.radi=200\n",
-    "        ###for now##\n",
+    "        self.zoom=1\n",
+    "        self.triangletype=1\n",
+    "        self.animation=False\n",
+    "        \n",
+    "        \n",
+    "    def make_image(self,rotated):        \n",
+    "            \n",
     "        if rotated==False:\n",
     "            self.rotation=(np.pi/6)\n",
     "        else:\n",
     "            self.rotation=(np.pi/6)+rotated\n",
     "            \n",
-    "            \n",
-    "            \n",
-    "        \n",
+    "        if self.triangletype==1:    \n",
+    "            self.Equilateraltrianglize()\n",
+    "        elif self.triangletype==30:\n",
+    "            self.Half_equilateral_t()      \n",
+    "         \n",
+    "        self.Trapeezer()\n",
+    "        self.Hexaganalator()    \n",
+    "        return(self.tring)   \n",
+    "    \n",
+    "    \n",
     "    def set_height_of_sub_im(self):\n",
     "        \"\"\"\n",
     "        Changes the height of the image to be sected by user, for use in GUI\n",
@@ -175,6 +188,24 @@
     "        \n",
     "        self.height_of_sub=height_of_sub\n",
     "    \n",
+    "    \n",
+    "    def setisos(self):\n",
+    "        \n",
+    "        self.triangletype=1\n",
+    "    \n",
+    "    \n",
+    "    def set30degrees(self):\n",
+    "        \n",
+    "        self.triangletype=30\n",
+    "    \n",
+    "    def setpos(self,center):\n",
+    "        self.center=center\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    def set_zoom(self,level):    \n",
+    "    \n",
+    "        self.zoom=level\n",
     "   # def rotate_sub_im(self, rotation_of_im):\n",
     "    #    \"\"\"\n",
     "   #     changes the angle of the image selected by the user, for use in GUI\n",
@@ -187,30 +218,65 @@
     "           \n",
     "   #     colour=x\n",
     "        \n",
+    "    def Half_equilateral_t(self):\n",
+    "        \"\"\"\n",
+    "        first step in creating a 3 mirror, 12 fold symetry pattern.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self.centre=np.array([self.center])\n",
+    "        self.hori=(int(np.trunc((np.cos(np.pi/6))*self.radi)))\n",
+    "        self.vert=int(1.5*self.radi)\n",
+    "        mycenter=(self.center[0],self.center[1])\n",
+    "        middle=((self.center[0]-(4*self.hori/5)),(self.center[1]-(2*self.vert/3)))\n",
     "        \n",
     "        \n",
+    "        surface=gz.Surface(4*self.hori,self.vert,bg_color=(1, 1, 1))\n",
+    "        fill=(gz.ImagePattern(self.theimage, pixel_zero=middle,extend=\"reflect\").scale(self.zoom,center=self.center)) \n",
+    "        verticies=[(0,self.vert),(self.hori,self.vert),(self.hori,0)]\n",
+    "      #  for (flip,rot,offset) in ([0,0,0],[1,0,0]):\n",
+    "        orig = gz.polyline(points=verticies,fill=(fill.rotate(self.rotation,mycenter)))\n",
+    "        mirro= gz.polyline(points=verticies,fill=(fill.rotate(self.rotation,mycenter)))\n",
+    "        orig=orig.translate((self.hori,0))\n",
+    "        mirro=mirro.translate((self.hori,0))\n",
+    "        mirro=mirro.scale(-1,1,center=(2*self.hori,0))\n",
+    "        set1=gz.Group([mirro,orig])               \n",
+    "        set2=gz.Group([mirro,orig])\n",
+    "        set3=gz.Group([mirro,orig])\n",
+    "        set2=set2.rotate(np.pi/3,center=(self.hori*2,0))\n",
+    "        set3=set3.rotate(-np.pi/3,center=(self.hori*2,0))\n",
+    "        set1.draw(surface)\n",
+    "        set2.draw(surface)\n",
+    "        set3.draw(surface)\n",
+    "        self.tring=Image.fromarray(surface.get_npimage(), \"RGB\")\n",
+    "     \n",
+    "        self.hori=self.hori*2\n",
     "        \n",
-    "    def Trianglize(self,center):\n",
-    "        self.centre=np.array([center])\n",
-    "        self.hori=(int(np.trunc((np.cos(np.pi/6))*2*200)))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def Equilateraltrianglize(self):\n",
+    "        self.centre=np.array([self.center])\n",
+    "        self.hori=(int(np.trunc((np.cos(np.pi/6))*2*self.radi)))\n",
     "        self.vert=int(self.radi*1.5)\n",
     "\n",
     "        surface=gz.Surface(2*self.hori,self.vert,bg_color=(1, 1, 1))\n",
-    "        fill=(gz.ImagePattern(self.theimage, pixel_zero=center,extend=\"reflect\")) \n",
+    "        fill=(gz.ImagePattern(self.theimage, pixel_zero=self.center,extend=\"reflect\").scale(self.zoom,center=self.center)) \n",
     "        for (nfaces,angle,rot,pangle,flip) in ([3, np.pi/3, np.pi/2,-np.pi/3,0],\n",
     "                                               [3, 0, np.pi/6,0,1],[3, -np.pi/3, -np.pi/6,np.pi/3,0]):\n",
     "            xy = (self.hori+(np.sin(pangle)*self.radi),0+(np.cos(pangle)*self.radi))\n",
     "            shape = gz.regular_polygon(self.radi,nfaces,angle=rot, xy= xy,\n",
-    "                    fill=(fill.rotate(self.rotation, center)).scale(1) )\n",
+    "                                       fill=(fill.rotate(self.rotation, self.center)).scale(1) )\n",
     "            if flip ==1:\n",
     "                shape=shape.scale(-1,1,center=xy)\n",
+    "           \n",
     "            shape.draw(surface)  \n",
     "\n",
     "        self.tring=Image.fromarray(surface.get_npimage(), \"RGB\")\n",
     "     \n",
     "\n",
-    "        self.Trapeezer()\n",
-    "        return(self.Hexaganalator())\n",
+    "    def timerot(self,time,rate):\n",
+    "        self.rotation=self.rotation+time*rate*0.01\n",
+    "        \n",
     "    \n",
     "    \n",
     "    def Trapeezer(self):\n",
@@ -224,12 +290,12 @@
     "    \n",
     "    \n",
     "    def Hexaganalator(self):\n",
-    "   #     return(self.tring)\n",
+    "\n",
     "        maincanvas=gz.Surface(4*self.hori,4*self.vert)\n",
     "        leftvert=(self.hori/2)\n",
     "        rightvert=(3*self.hori/2)\n",
     "        _image=np.array(self.tring)\n",
-    "        center=np.array([self.vert, self.hori])\n",
+    "   #     center=np.array([self.vert, self.hori])\n",
     "        \n",
     "        pattern=(gz.ImagePattern(_image,pixel_zero=(0,0)))\n",
     "        hexs=[(self.hori,self.vert),(self.hori,-self.vert),(self.hori,3*self.vert),(-self.hori/2,0),\n",
@@ -240,16 +306,33 @@
     "                                      fill=pattern,xy=(_sw,_sh))\n",
     "            hex_pat.draw(maincanvas)\n",
     "            outp= maincanvas.get_npimage()\n",
-    "        \n",
-    "        self.tring = Image.fromarray(outp, \"RGB\")\n",
-    "        return(self.tring)\n",
+    "        if self.animation==True:\n",
+    "            return(outp)\n",
+    "        else:\n",
+    "            self.tring = Image.fromarray(outp, \"RGB\")\n",
+    "            \n",
+    "    \n",
+    "    def saveimage(self,text):\n",
+    "        name=text+\".jpg\"\n",
+    "        self.tring.save(name)\n",
     "    \n",
     "    \n",
-    "    def saveimage(self,name):\n",
-    "        savename=name+\".jpg\"\n",
-    "        print(savename)\n",
-    "        self.tring.save(savename)\n",
-    "        "
+    "    def runner(self, time):         \n",
+    "             \n",
+    "        self.timerot(time,self.rate)\n",
+    "            \n",
+    "        self.Equilateraltrianglize()\n",
+    "        self.Trapeezer()\n",
+    "            \n",
+    "        return(self.Hexaganalator())\n",
+    "    \n",
+    "    \n",
+    "    def animate_rota(self,D):\n",
+    "        self.rate=(2*np.pi)/D \n",
+    "        self.animation=True \n",
+    "        clip = clip = mpy.VideoClip(self.runner, duration=20)\n",
+    "        clip.write_videofile(\"madeclip.mp4\",fps=10,audio=False)\n",
+    "        self.animation=False"
    ]
   },
   {
@@ -381,7 +464,7 @@
     }
    ],
    "source": [
-    "from tkinter.filedialog import askopenfilename\n",
+    "from tkinter.filedialog import askopenfilename,asksaveasfilename\n",
     "from tkinter import *\n",
     "from PIL import Image, ImageDraw, ImageOps, ImageTk\n",
     "\n",
@@ -397,17 +480,26 @@
     "         \n",
     "        self.started=False\n",
     "        self.rotated=False\n",
+    "        self.pos=(0,0)\n",
     "        self.master.title(\"Keleidoscopia\")\n",
     "        self.pack(fill=BOTH, expand=1)\n",
-    "                  \n",
+    "        self.leftframe=LabelFrame(self.master,text=\"Sample Image\")\n",
+    "        self.leftframe.pack(side=LEFT)\n",
+    "        \n",
     "        mymenu=Menu(self.master)          \n",
     "        self.master.config(menu=mymenu)\n",
     "        \n",
     "        file=Menu(mymenu)\n",
-    "        file.add_command(label=\"Open File\",command=self.openfile)\n",
-    "        file.add_command(label=\"Select File\",command=self.selectfile)\n",
+    "        file.add_command(label=\"Open File\",command=self.selectfile)\n",
     "        file.add_command(label=\"Save Image\",command=self.savefunc)\n",
     "        mymenu.add_cascade(label=\"File\",menu=file)\n",
+    "        \n",
+    "        options=Menu(mymenu)\n",
+    "        options.add_command(label=\"Isosceles Triangle\", command=self.setisos)\n",
+    "        options.add_command(label=\"30deg Triangle\", command=self.set30deg)\n",
+    "        mymenu.add_cascade(label=\"Options\",menu=options)\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        edit=Menu(mymenu)\n",
     "\n",
@@ -415,60 +507,113 @@
     "  #      edit.add_command(label=\"Kaleidoscope\", command=self.showversion)\n",
     "        mymenu.add_cascade(label=\"Edit\",menu=edit)\n",
     "        \n",
-    " \n",
-    "\n",
+    "        self.master.bind_all(\"<MouseWheel>\", self._on_mousewheel)\n",
     "        \n",
-    "        self.mycanvas = Canvas(self.master,width=600,height=800,bd=2)\n",
-    "        self.mycanvas.pack(side=LEFT)\n",
+    "        \n",
+    "        self.mycanvas = Canvas(self.leftframe,width=400,height=600,bd=2)\n",
+    "        self.mycanvas.grid(row=0,column=0,rowspan=4)\n",
     " \n",
+    "        \n",
+    "        self.an_rot_button=Button(self.leftframe,text=\"Rotation Animation\" ,command=self.animate_rot)\n",
+    "        self.an_rot_button.grid(row=4,column=2)\n",
+    "    \n",
+    "    \n",
+    "        self.slider = Scale(self.leftframe, from_=-2*np.pi, to=2*np.pi, orient=HORIZONTAL, label=\"Image Rotation Angle\",\n",
+    "                            command=self.rotator)\n",
+    "        self.slider.grid(row=4,column=0)\n",
+    "        \n",
     "\n",
-    "        self.slider = Scale(self.master, from_=-2*np.pi, to=2*np.pi, orient=HORIZONTAL, command=self.rotator,resolution = .1)\n",
-    "        self.slider.pack(side=LEFT)\n",
+    "    \n",
+    "        self.zoomer = Scale(self.leftframe, from_=-5, to=5, orient=HORIZONTAL,label=\"Sample Scale Factor\",\n",
+    "                            resolution=0.5, command=self.zoom_changer)\n",
+    "        self.zoomer.grid(row=4,column=1)\n",
     "        \n",
     "        \n",
     "         \n",
     "    def selectfile(self):\n",
+    "        if self.started==True:\n",
+    "            self.my2canvas.destroy()\n",
     "        name = askopenfilename(initialdir=\"C:/Users/Tom/Documents/Python Scripts/Kaleidoscope/\",\n",
-    "                           filetypes =((\"jpeg files\",\"*.jpg\"),(\"All Files\",\"*.*\")),\n",
+    "                           filetypes =((\"jpeg files\",\"*.jpg\",\".png\"),(\"png files\",\"*.png\"),(\"All Files\",\"*.*\")),\n",
     "                           title = \"Choose a file.\")\n",
-    "        self.filedir=(name)\n",
-    "\n",
+    "        self.filedir=name\n",
     "        \n",
-    "    def openfile(self):\n",
-    "        self.myclip = Image.open(self.filedir)\n",
-    "        _intermediate=ImageTk.PhotoImage(self.myclip)\n",
-    "        self.myshownIm=_intermediate\n",
-    "        (w,h)= self.myclip.size\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        self.mycanvas.create_image(0,0,image=self.myshownIm,anchor=\"nw\")\n",
-    "     #   self.mycanvas.config(scrollregion=(0,0,w,h))     \n",
-    "        self.mycanvas.bind(\"<Button 1>\",self.printcoords)\n",
     "        \n",
     "        self.my2canvas = Canvas(self.master,width=1500,height=1500,bd=2,)\n",
     "        self.my2canvas.pack(side=RIGHT)\n",
+    "        self.openfile()\n",
+    "        \n",
+    "        \n",
+    "    def openfile(self):    \n",
+    "                \n",
+    "        \n",
+    "        self.myclip = Image.open(self.filedir)\n",
+    "        (w,h)= self.myclip.size\n",
+    "        self.ratio=1\n",
+    "        if w>400 or h>600:           \n",
+    "            wratio=400/w        \n",
+    "            hratio=600/h\n",
+    "            self.ratio=wratio\n",
+    "            if wratio>hratio:\n",
+    "                self.ratio=hratio\n",
+    "            nw=int(np.trunc(w*self.ratio))\n",
+    "            nh=int(np.trunc(h*self.ratio))                \n",
+    "                \n",
+    "            clipped=self.myclip.resize((nw,nh))\n",
+    "        \n",
+    "            _intermediate=ImageTk.PhotoImage(clipped)\n",
+    "        else:\n",
+    "            _intermediate=ImageTk.PhotoImage(self.myclip)\n",
+    "        self.myshownIm=_intermediate\n",
+    "        \n",
+    "        \n",
+    "        self.trianglevers=Stillkaleido(self.myclip)\n",
+    "        \n",
+    "\n",
+    "        self.mycanvas.create_image(0,0,image=self.myshownIm,anchor=\"nw\")\n",
+    "     #   self.mycanvas.config(scrollregion=(0,0,w,h))     \n",
+    "        self.mycanvas.bind(\"<Button 1>\",self.printcoords)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    def showversion(self):\n",
+    "               \n",
     "        \n",
-    "        self.started=True\n",
-    "        self.trianglevers=Stillkaleido(self.myclip,self.rotated)\n",
-    "        self.imager=ImageTk.PhotoImage(self.trianglevers.Trianglize((self.x,self.y)))\n",
-    "\n",
-    "        \n",
+    "        self.imager=ImageTk.PhotoImage(self.trianglevers.make_image(self.rotated))\n",
     "        \n",
     "        self.my2canvas.create_image(0,0,image=self.imager,anchor=\"nw\")\n",
     "        \n",
     "    def rotator(self,event):\n",
-    "        print(\"!!!!!!\")\n",
+    "\n",
     "        change=self.slider.get()\n",
     "        self.rotated=change\n",
     "        \n",
-    "        self.trianglevers=Stillkaleido(self.myclip,self.rotated)\n",
-    "        self.imager=ImageTk.PhotoImage(self.trianglevers.Trianglize((self.x,self.y)))\n",
+    "        self.rot_changer()\n",
     "        \n",
-    "        self.my2canvas.create_image(0,0,image=self.imager,anchor=\"nw\")\n",
+    "    def zoom_changer(self,event):\n",
     "        \n",
+    "        if self.started==True:\n",
+    "            newzoom=self.zoomer.get()\n",
+    "            if newzoom<0:\n",
+    "                newzoom=1/newzoom\n",
+    "            self.trianglevers.set_zoom(newzoom)\n",
+    "            \n",
+    "            self.showversion()\n",
+    "    \n",
+    "    def rot_changer(self):\n",
+    "    \n",
+    "        if self.started==True:\n",
+    "            self.showversion()\n",
+    "      #  self.trianglevers=Stillkaleido(self.myclip,self.rotated)\n",
+    "            \n",
+    "    def setisos(self):\n",
+    "        \n",
+    "        self.trianglevers.setisos()\n",
+    "   \n",
+    "    def set30deg(self):\n",
+    "        \n",
+    "        self.trianglevers.set30degrees()\n",
+    "\n",
     "    def showTxt(self):\n",
     "        text=Label(self,text=\"Wooop!, there it is!\")\n",
     "        text.pack()\n",
@@ -479,21 +624,43 @@
     "        \n",
     "        \n",
     "    def printcoords(self,event):\n",
-    "\n",
-    "        x = self.mycanvas.canvasx(event.x)\n",
-    "        y = self.mycanvas.canvasy(event.y)\n",
-    "        self.x=int(x)\n",
-    "        self.y=int(y)\n",
+    "        self.started=True\n",
+    "        x = self.mycanvas.canvasx(event.x)/self.ratio\n",
+    "        y = self.mycanvas.canvasy(event.y)/self.ratio\n",
+    "        self.pos=(int(x),int(y))\n",
+    "        self.trianglevers.setpos(self.pos)\n",
     "        self.showversion()    \n",
+    "    \n",
+    "    def _on_mousewheel(self, event):\n",
     "        \n",
+    "        if event.delta>0:\n",
+    "            if self.rotated<np.pi*2:\n",
+    "                self.rotated+=((event.delta/480))\n",
+    "            else:\n",
+    "                self.rotated=-2*np.pi\n",
+    "        if event.delta<0:\n",
+    "            if self.rotated>=-np.pi*2:\n",
+    "                self.rotated+=((event.delta/480))\n",
+    "            else:\n",
+    "                self.rotated=2*np.pi\n",
+    "        self.rot_changer()\n",
+    "        self.slider.set(self.rotated)\n",
     "        \n",
     "    def savefunc(self):\n",
-    "        name=\"trial3\"\n",
-    "        self.trianglevers.saveimage(name)\n",
+    "        savename = asksaveasfilename(filetypes = ((\"jpeg files\",\"*.jpg\"),(\"png files\",\".png\")))\n",
+    "\n",
+    "        if savename ==None:\n",
+    "            return\n",
+    "        else:       \n",
+    "            self.trianglevers.saveimage(savename)\n",
+    "    \n",
+    "    def animate_rot(self):\n",
+    "        self.trianglevers.animate_rota(20)\n",
+    "        \n",
     "    \n",
     "        \n",
     "root=Tk()\n",
-    "root.geometry(\"800x600\")\n",
+    "root.geometry(\"1400x800\")\n",
     "app=Window(root)\n",
     "root.mainloop()\n",
     "    "
